--- a/scalecube-organization-api/pom.xml
+++ b/scalecube-organization-api/pom.xml
@@ -1,15 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>io.scalecube</groupId>
-		<artifactId>configuration-parent</artifactId>
+		<artifactId>scalecube-organization-service</artifactId>
 		<version>0.0.6-SNAPSHOT</version>
 	</parent>
-	<artifactId>scalecube-account-api</artifactId>
-	
-	<name>scalecube-account-api</name>
+	<artifactId>scalecube-organization-api</artifactId>
+
+	<name>scalecube-organization-api</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
