--- a/scalecube-webapp-example/pom.xml
+++ b/scalecube-webapp-example/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.scalecube</groupId>
-		<artifactId>configuration-parent</artifactId>
+		<artifactId>scalecube-organization-service</artifactId>
         <version>0.0.6-SNAPSHOT</version>
 	</parent>
 
