--- a/scalecube-organization-api/pom.xml
+++ b/scalecube-organization-api/pom.xml
@@ -28,6 +28,11 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-couchbase</artifactId>
+			<version>3.0.8.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
