--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 
 		<scalecube-services.version>2.0.14</scalecube-services.version>
 		<reactor-core.version>3.1.6.RELEASE</reactor-core.version>
+		<reactor.version>3.1.6.RELEASE</reactor.version>
 		<redisson.version>3.4.3</redisson.version>
 		<jackson-databind.version>2.7.6</jackson-databind.version>
 		<scalecube-testlib.version>1.0.9</scalecube-testlib.version>
@@ -107,7 +108,31 @@
 			<artifactId>scalecube-testlib</artifactId>
 			<version>${scalecube-testlib.version}</version>
 		</dependency>
-
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <version>${reactor.version}</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- This will get hamcrest-core automatically -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 
