--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -27,7 +27,10 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
