--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<version>2.9.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.api-client</groupId>
