--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
 		<dockerfile-maven.version>1.3.6</dockerfile-maven.version>
 		<project.docker.repository>scalecube/configuration</project.docker.repository>
 		<argLine>-Xms1024m -Xmx2048m</argLine>
+		<junit.jupiter.version>5.1.0</junit.jupiter.version>
 
 		<scalecube-services.version>2.0.14</scalecube-services.version>
 		<reactor-core.version>3.1.6.RELEASE</reactor-core.version>
@@ -80,6 +81,12 @@
 
 
 	<dependencies>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.scalecube/scalecube-services -->
 		<dependency>
 			<groupId>io.scalecube</groupId>
