--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -18,6 +18,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.couchbase.client</groupId>
+			<artifactId>java-client</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		<dependency>
 			<groupId>io.scalecube</groupId>
 			<artifactId>scalecube-organization-api</artifactId>
 			<version>${project.version}</version>
