--- a/scalecube-organization/src/main/resources/settings.properties
+++ b/scalecube-organization/src/main/resources/settings.properties
@@ -1,5 +1,5 @@
-couchbase.admin=Administrsator
-couchbase.password=123456
+couchbase.admin.user=Administrator
+couchbase.admin.password=123456
 couchbase.cluster.nodes=
 org.members.bucket.suffix=%s-members
 org.members.bucket.user.roles=data_reader,data_writer
@@ -10,3 +10,7 @@ org.members.bucket.quota=100
 org.members.bucket.replicas=0
 org.members.bucket.indexReplicas=false
 org.members.bucket.enableFlush=false
+organizations.bucket=organizations
+organizations.bucket.password=123456
+users.bucket=users
+users.bucket.password=123456
