--- a/scalecube-organization/src/main/resources/settings.properties
+++ b/scalecube-organization/src/main/resources/settings.properties
@@ -2,7 +2,7 @@ couchbase.admin.user=Administrator
 couchbase.admin.password=123456
 couchbase.cluster.nodes=
 org.members.bucket.suffix=%s-members
-org.members.bucket.user.roles=data_reader,data_writer
+org.members.bucket.user.roles=data_reader,data_writer,query_select
 org.members.bucket.type=COUCHBASE
 
 # org members quota in megabytes
