create service runner

--- a/scalecube-organization/src/main/resources/settings.properties
+++ b/scalecube-organization/src/main/resources/settings.properties
@@ -7,6 +7,7 @@ org.members.bucket.type=COUCHBASE
 
 # org members quota in megabytes
 org.members.bucket.quota=100
+
 org.members.bucket.replicas=0
 org.members.bucket.indexReplicas=false
 org.members.bucket.enableFlush=false
@@ -14,3 +15,6 @@ organizations.bucket=organizations
 organizations.bucket.password=123456
 users.bucket=users
 users.bucket.password=123456
+
+# default seed
+#seeds=seed:4802
