--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>5.0.5.RELEASE</spring.version>
+		<scalecube-services.version>2.1.9</scalecube-services.version>
 	</properties>
 
 	<dependencies>
@@ -62,7 +63,7 @@
 					<!-- MainClass in mainfest make a executable jar -->
 					<archive>
 						<manifest>
-							<mainClass>io.scalecube.server.OrganizationServiceMain</mainClass>
+							<mainClass>io.scalecube.server.OrganizationServiceRunner</mainClass>
 						</manifest>
 					</archive>
 
