--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,9 @@
 	</prerequisites>
 
 	<scm>
-		<url>https://github.com/scalecube/scalecube</url>
-		<connection>scm:git:git@github.com:scalecube/scalecube.git</connection>
-		<developerConnection>scm:git:git@github.com:scalecube/scalecube.git
-        </developerConnection>
+		<url>https://github.com/scalecube/scalecube-organization-service</url>
+		<connection>scm:git:git@github.com:scalecube/scalecube-organization-service.git</connection>
+		<developerConnection>scm:git:git@github.com:scalecube/scalecube-organization-service.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
