--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.scalecube</groupId>
-	<artifactId>scalecube-organization-service</artifactId>
-	<version>0.0.6-SNAPSHOT</version>
+	<artifactId>scalecube-organization-parent</artifactId>
+	<version>2.0.12-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>scalecube-organization-service</name>
@@ -57,18 +57,21 @@
 	</distributionManagement>
 
 	<properties>
+        <scalecube-services.version>2.1.9</scalecube-services.version>
+        <scalecube-gateway.version>2.0.11</scalecube-gateway.version>
+        <scalecube-testlib.version>1.0.9</scalecube-testlib.version>
+        
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<dockerfile-maven.version>1.3.6</dockerfile-maven.version>
 		<project.docker.repository>scalecube/configuration</project.docker.repository>
 		<argLine>-Xms1024m -Xmx2048m</argLine>
 		<junit.jupiter.version>5.1.0</junit.jupiter.version>
-		<scalecube-services.version>2.1.9</scalecube-services.version>
 		<reactor-core.version>3.1.6.RELEASE</reactor-core.version>
 		<reactor.version>3.1.6.RELEASE</reactor.version>
 		<redisson.version>3.4.3</redisson.version>
 		<jackson-databind.version>2.7.6</jackson-databind.version>
-		<scalecube-testlib.version>1.0.9</scalecube-testlib.version>
+	
 	</properties>
 
 	<modules>
@@ -80,21 +83,10 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.scalecube</groupId>
-			<artifactId>scalecube-services-api</artifactId>
-			<version>${scalecube-services.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>${junit.jupiter.version}</version>
 			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.scalecube/scalecube-services -->
-		<dependency>
-			<groupId>io.scalecube</groupId>
-			<artifactId>scalecube-services</artifactId>
-			<version>${scalecube-services.version}</version>
 		</dependency>
 
 		<dependency>
@@ -107,23 +99,7 @@
 			<artifactId>redisson</artifactId>
 			<version>${redisson.version}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>${jackson-databind.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.scalecube</groupId>
-			<artifactId>scalecube-testlib</artifactId>
-			<version>${scalecube-testlib.version}</version>
-		</dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
-            <version>${reactor.version}</version>
-            <scope>test</scope>
-        </dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
