retreive token public key using auth0 api and token claims issuer kid

--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -19,6 +19,16 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>jwks-rsa</artifactId>
+      <version>0.6.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.scalecube</groupId>
       <artifactId>scalecube-security-jwt</artifactId>
       <version>${scalecube-security-jwt.version}</version>
