removed dependency to auth0-jwk

--- a/scalecube-organization/src/main/resources/settings.properties
+++ b/scalecube-organization/src/main/resources/settings.properties
@@ -1,6 +1,4 @@
 # default seed
 #seeds=seed:4802
 
-url.jwk.provider=https://scooter.auth0.com/
-#public.key.provider=io.scalecube.tokens.Auth0PublicKeyProvider
-public.key.provider=java.lang.String
+public.key.provider=io.scalecube.tokens.Auth0PublicKeyProvider
