--- a/scalecube-organization/src/main/resources/couchbase-settings.properties
+++ b/scalecube-organization/src/main/resources/couchbase-settings.properties
@@ -1,8 +1,8 @@
-couchbase.admin.profile=Administrator
+couchbase.admin.user=Administrator
 couchbase.admin.password=123456
 couchbase.cluster.nodes=
 org.members.bucket.suffix=%s-members
-org.members.bucket.profile.roles=data_reader,data_writer,query_select
+org.members.bucket.user.roles=data_reader,data_writer,query_select
 org.members.bucket.type=COUCHBASE
 # org members quota in megabytes
 org.members.bucket.quota=100
@@ -11,5 +11,3 @@ org.members.bucket.indexReplicas=false
 org.members.bucket.enableFlush=false
 organizations.bucket=organizations
 organizations.bucket.password=123456
-profiles.bucket=profiles
-profiles.bucket.password=123456
