--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>com.couchbase.client</groupId>
       <artifactId>java-client</artifactId>
-      <version>2.6.0</version>
+      <version>${couchbase-client-version}</version>
     </dependency>
 
     <!-- This will get hamcrest-core automatically -->
