--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -9,8 +9,8 @@
     <version>2.0.12-SNAPSHOT</version>
   </parent>
 
-  <artifactId>scalecube-organization-service</artifactId>
-  <name>scalecube-organization-service</name>
+  <artifactId>scalecube-organization</artifactId>
+  <name>scalecube-organization</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -41,7 +41,7 @@
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
