--- a/scalecube-organization/src/main/resources/settings.properties
+++ b/scalecube-organization/src/main/resources/settings.properties
@@ -2,3 +2,7 @@
 #seeds=seed:4802
 public.key.provider=io.scalecube.tokens.Auth0PublicKeyProvider
 token.expiration=2678399982
+vault.secret.path=%s/api-keys
+vault.address=http://127.0.0.1:8200
+vault.token=68f4239a-71c0-c2a7-e223-46ea8fba069d
+
