--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -19,6 +19,21 @@
 
   <dependencies>
     <dependency>
+      <groupId>io.scalecube</groupId>
+      <artifactId>config</artifactId>
+      <version>${scalecube.config.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.scalecube</groupId>
+      <artifactId>config-vault</artifactId>
+      <version>${scalecube.config.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.bettercloud</groupId>
+      <artifactId>vault-java-driver</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
