--- a/pom.xml
+++ b/pom.xml
@@ -6,34 +6,16 @@
 
   <artifactId>scalecube-organization-parent</artifactId>
   <version>2.0.12-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>scalecube-organization-parent</name>
+
 
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-parent-pom</artifactId>
-    <version>0.0.10</version>
+    <version>0.0.11</version>
   </parent>
+  <packaging>pom</packaging>
 
-
-  <description>
-    ScaleCube is a lightweight decentralized cluster membership, failure detection, messaging and
-    gossip protocol library for the Java VM.
-  </description>
-  <inceptionYear>2015</inceptionYear>
-  <url>http://scalecube.io</url>
-
-  <licenses>
-    <license>
-      <name>The Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    </license>
-  </licenses>
-
-  <prerequisites>
-    <maven>3.5.0</maven>
-  </prerequisites>
-
+  <name>scalecube-organization-parent</name>
   <scm>
     <url>https://github.com/scalecube/scalecube-organization-service</url>
     <connection>scm:git:git@github.com:scalecube/scalecube-organization-service.git</connection>
@@ -42,48 +24,346 @@
     <tag>HEAD</tag>
   </scm>
 
-  <developers>
-    <developer>
-      <id>scalecube.io</id>
-      <name>The ScaleCube Project Contributors</name>
-      <email>info@scalecube.io</email>
-      <organization>The ScaleCube Project</organization>
-      <organizationUrl>http://scalecube.io/</organizationUrl>
-    </developer>
-  </developers>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
-  <repositories>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/repositories/releases/content/</url>
-    </repository>
-  </repositories>
   <properties>
     <scalecube.config.version>0.3.6</scalecube.config.version>
     <scalecube-services.version>2.1.23</scalecube-services.version>
     <scalecube-gateway.version>2.0.11</scalecube-gateway.version>
     <scalecube-security-jwt.version>1.0.2</scalecube-security-jwt.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <dockerfile-maven.version>1.3.6</dockerfile-maven.version>
-    <project.docker.repository>scalecube/configuration</project.docker.repository>
     <junit.jupiter.version>5.1.0</junit.jupiter.version>
     <jackson-databind.version>2.7.6</jackson-databind.version>
-    <couchbase-client-version>2.6.0</couchbase-client-version>
+    <vault-java-driver.version>3.1.0</vault-java-driver.version>
+    <couchbase-client.version>2.6.0</couchbase-client.version>
+    <reactor.version>3.1.8.RELEASE</reactor.version>
+    <netty.version>4.1.25.Final</netty.version>
+    <reactor-netty.version>0.7.8.RELEASE</reactor-netty.version>
+    <slf4j.version>1.7.7</slf4j.version>
+    <log4j.version>2.11.1</log4j.version>
+    <commons-codec.version>1.10</commons-codec.version>
+    <hamcrest-library.version>1.3</hamcrest-library.version>
+
+    <dockerfile.maven.extension.version>1.3.7</dockerfile.maven.extension.version>
+    <dockerfile.maven.version>1.3.7</dockerfile.maven.version>
+    <dockerfile.repository>scalecube/${project.artifactId}</dockerfile.repository>
+    <dockerfile.useMavenSettingsForAuth>true</dockerfile.useMavenSettingsForAuth>
   </properties>
 
   <modules>
     <module>scalecube-organization-api</module>
     <module>scalecube-organization</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>config</artifactId>
+        <version>${scalecube.config.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>config-vault</artifactId>
+        <version>${scalecube.config.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.bettercloud</groupId>
+        <artifactId>vault-java-driver</artifactId>
+        <version>${vault-java-driver.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>${commons-codec.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-security-jwt</artifactId>
+        <version>${scalecube-security-jwt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-services-discovery</artifactId>
+        <version>${scalecube-services.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>rsocket-services-transport</artifactId>
+        <version>${scalecube-services.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-services-jackson</artifactId>
+        <version>${scalecube-services.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-services</artifactId>
+        <version>${scalecube-services.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-services-api</artifactId>
+        <version>${scalecube-services.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.couchbase.client</groupId>
+        <artifactId>java-client</artifactId>
+        <version>${couchbase-client.version}</version>
+      </dependency>
+
+      <!-- Loggers -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+
+      <!-- Reactor -->
+      <dependency>
+        <groupId>io.projectreactor</groupId>
+        <artifactId>reactor-core</artifactId>
+        <version>${reactor.version}</version>
+      </dependency>
+
+      <!-- Reactor Netty -->
+      <dependency>
+        <groupId>io.projectreactor.ipc</groupId>
+        <artifactId>reactor-netty</artifactId>
+        <version>${reactor-netty.version}</version>
+      </dependency>
+
+      <!-- Netty -->
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-buffer</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.projectreactor</groupId>
+        <artifactId>reactor-test</artifactId>
+        <version>${reactor-test.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.jupiter.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- This will get hamcrest-core automatically -->
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-library</artifactId>
+        <version>${hamcrest-library.version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <build>
+    <extensions>
+      <extension>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-extension</artifactId>
+        <version>${dockerfile.maven.extension.version}</version>
+      </extension>
+    </extensions>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>${maven-shade-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>default</id>
+              <phase>package</phase>
+              <goals>
+                <goal>shade</goal>
+              </goals>
+              <configuration>
+                <transformers>
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                    <mainClass>${mainClass}</mainClass>
+                  </transformer>
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                </transformers>
+                <outputDirectory>${project.build.directory}</outputDirectory>
+                <createDependencyReducedPom>false</createDependencyReducedPom>
+                <shadedArtifactAttached>true</shadedArtifactAttached>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>${mainClass}</mainClass>
+              </manifest>
+            </archive>
+            <excludes>
+              <exclude>META-INF/*.SF</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>copy-dependencies</goal>
+              </goals>
+              <configuration>
+                <overWriteReleases>false</overWriteReleases>
+                <outputDirectory>${project.build.directory}/lib</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>com.spotify</groupId>
+          <artifactId>dockerfile-maven-plugin</artifactId>
+          <version>${dockerfile.maven.version}</version>
+          <executions>
+            <execution>
+              <id>default</id>
+              <goals>
+                <goal>build</goal>
+              </goals>
+              <phase>install</phase>
+              <configuration>
+                <buildArgs>
+                  <EXECUTABLE_JAR>${project.build.finalName}</EXECUTABLE_JAR>
+                  <SERVICE_NAME>${project.artifactId}</SERVICE_NAME>
+                </buildArgs>
+                <tag>latest</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>tag-version</id>
+              <goals>
+                <goal>tag</goal>
+              </goals>
+              <phase>install</phase>
+              <configuration>
+                <tag>${project.version}</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>deployment</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>latest</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>tag-deployment</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>${project.version}</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>create-extra-tags</id>
+              <goals>
+                <goal>tag</goal>
+              </goals>
+              <phase>install</phase>
+              <configuration>
+                <tag>${extratags}</tag>
+                <skipTag>${noextratags}</skipTag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>push-extra-tags</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>${extratags}</tag>
+                <skip>${noextratags}</skip>
+              </configuration>
+            </execution>
+          </executions>
+          <configuration>
+            <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+  <profiles>
+    <profile>
+      <id>no-extra-tags</id>
+      <properties>
+        <noextratags>true</noextratags>
+      </properties>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+    </profile>
+    <profile>
+      <id>extra-tags</id>
+      <properties>
+        <noextratags>false</noextratags>
+      </properties>
+      <activation>
+        <property>
+          <name>extratags</name>
+        </property>
+      </activation>
+    </profile>
+    <profile>
+      <id>SkipDockerGoals</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <dockerfile.skip>true</dockerfile.skip>
+      </properties>
+    </profile>
+    <profile>
+      <id>RunDockerGoals</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+        <file>
+          <exists>/usr/bin/docker</exists>
+        </file>
+      </activation>
+      <properties>
+        <dockerfile.skip>false</dockerfile.skip>
+      </properties>
+    </profile>
+  </profiles>
 </project>
