store organization secret in dedicated path

--- a/scalecube-organization/src/main/resources/settings.properties
+++ b/scalecube-organization/src/main/resources/settings.properties
@@ -2,5 +2,5 @@
 #seeds=seed:4802
 public.key.provider=io.scalecube.tokens.Auth0PublicKeyProvider
 token.expiration=2678399982
-vault.secret.path=%s/api-keys
+vault.secret.path=%s/api-keys/
 
