use couchbase community version roles

--- a/scalecube-organization/src/main/resources/couchbase-settings.properties
+++ b/scalecube-organization/src/main/resources/couchbase-settings.properties
@@ -1,8 +1,8 @@
 org.members.bucket.suffix=%s-members
 # roles in community version
-# org.members.bucket.user.roles=bucket_full_access
+org.members.bucket.user.roles=bucket_full_access
 # roles in enterprise version
-org.members.bucket.user.roles=data_reader,data_writer,query_select
+#org.members.bucket.user.roles=data_reader,data_writer,query_select
 org.members.bucket.type=COUCHBASE
 # org members quota in megabytes
 org.members.bucket.quota=100
