--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-parent-pom</artifactId>
-    <version>0.0.11</version>
+    <version>0.0.16</version>
   </parent>
   <packaging>pom</packaging>
 
@@ -24,23 +24,19 @@
 
   <properties>
     <scalecube.config.version>0.3.6</scalecube.config.version>
-    <scalecube-services.version>2.4.3</scalecube-services.version>
+    <scalecube-services.version>2.4.4-SNAPSHOT</scalecube-services.version>
+    <scalecube-gateway.version>2.4.4-SNAPSHOT</scalecube-gateway.version>
     <scalecube-security-jwt.version>1.0.2</scalecube-security-jwt.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit.jupiter.version>5.1.0</junit.jupiter.version>
+    <junit.jupiter.version>5.3.0</junit.jupiter.version>
     <jackson-databind.version>2.7.6</jackson-databind.version>
     <vault-java-driver.version>3.1.0</vault-java-driver.version>
     <couchbase-client.version>2.6.0</couchbase-client.version>
-    <reactor.version>3.2.1.RELEASE</reactor.version>
-    <netty.version>4.1.29.Final</netty.version>
-    <reactor-netty.version>0.8.1.RELEASE</reactor-netty.version>
     <slf4j.version>1.7.7</slf4j.version>
     <log4j.version>2.11.1</log4j.version>
     <commons-codec.version>1.10</commons-codec.version>
     <hamcrest-library.version>1.3</hamcrest-library.version>
-
-    <dockerfile.maven.extension.version>1.3.7</dockerfile.maven.extension.version>
-    <dockerfile.maven.version>1.3.7</dockerfile.maven.version>
+    <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
     <dockerfile.repository>scalecube/${project.artifactId}</dockerfile.repository>
     <dockerfile.useMavenSettingsForAuth>true</dockerfile.useMavenSettingsForAuth>
   </properties>
@@ -79,7 +75,7 @@
       </dependency>
       <dependency>
         <groupId>io.scalecube</groupId>
-        <artifactId>scalecube-services-discovery</artifactId>
+        <artifactId>services-discovery</artifactId>
         <version>${scalecube-services.version}</version>
       </dependency>
       <dependency>
@@ -123,34 +119,6 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
         <version>${log4j.version}</version>
-      </dependency>
-
-      <!-- Reactor -->
-      <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-core</artifactId>
-        <version>${reactor.version}</version>
-      </dependency>
-
-      <!-- Reactor Netty -->
-      <dependency>
-        <groupId>io.projectreactor.netty</groupId>
-        <artifactId>reactor-netty</artifactId>
-        <version>${reactor-netty.version}</version>
-      </dependency>
-
-      <!-- Netty -->
-      <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty-buffer</artifactId>
-        <version>${netty.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-test</artifactId>
-        <version>${reactor-test.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
