Add log4j2 configuration to integrate with Datadog

--- a/scalecube-organization/Dockerfile
+++ b/scalecube-organization/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:8
 
+ARG LOG4J_CONFIG="-Dlog4j.configurationFile=log4j2.xml"
 ARG EXECUTABLE_JAR
 
 WORKDIR /opt/scalecube
@@ -7,4 +8,4 @@ WORKDIR /opt/scalecube
 COPY target/lib lib
 COPY target/${EXECUTABLE_JAR}.jar app.jar
 
-ENTRYPOINT exec java $JAVA_OPTS -Dlog4j.configurationFile=log4j2.xml -jar app.jar
+ENTRYPOINT exec java $JAVA_OPTS $LOG4J_CONFIG -jar app.jar
